<?xml version="1.0"?>
<package format="2">
  <name>neo_relayboard_v3</name>
  <version>1.0.0</version>
  <description>ROS1 node for Neobotix RelayBoardV3 (ported from ROS2)</description>

  <maintainer email="ros@neobotix.de">Neobotix</maintainer>
  <license>BSD</license>
  <url type="website">https://www.neobotix-roboter.de/</url>
  <author>Jakob Wenzel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>neo_msgs</depend>
  <depend>neo_srvs</depend>

  <export>
  </export>
</package>

